--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/uuid": "^9.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^0.2.0",
     "firebase": "^10.7.2",
     "firebase-admin": "^12.0.0",
     "lucide-react": "^0.315.0",
