--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.18.1",
     "@types/uuid": "^9.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
+    "date-fns": "^3.3.1",
     "emoji-mart": "^5.5.2",
     "firebase": "^10.7.2",
     "firebase-admin": "^12.0.0",
